--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -20,6 +20,24 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  padding: 10px 10px 8px 4px;
+  display: flex;
+}
+
+
+.rest {
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 8px;
+  column-gap: 4px;
+
+}
+
+.icons {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0px 8px 0px 8px;
 }
 
 .icon {
@@ -33,6 +51,12 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.header {
+  margin-right: auto;
+  font-weight: bold;
+  font-size: 18px;
 }
 
 .close-button {
