--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -4,7 +4,24 @@ body {
   height: 100vh;
   margin: 0;
   overflow: hidden;
+  color: black;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  gap: 8px;
+}
+
+a {
+  text-decoration: none;
+  color: darkgrey;
 }
 
 img {
@@ -16,6 +33,7 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 10px;
 }
 
 input {
@@ -24,4 +42,23 @@ input {
   padding: 8px 24px;
   width: 400px;
   margin-bottom: 16px;
+}
+
+.header,
+.footer {
+  display: flex;
+  padding: 16px;
+  justify-content: space-between;
+}
+
+
+
+.footer {
+  background-color: #eeeeee;
+}
+.content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
